fixed the header on mobile & tablet

--- a/src/assets/css/_responsive.sass
+++ b/src/assets/css/_responsive.sass
@@ -137,6 +137,37 @@ $textColorBody: #000
     color: $primaryColor
     right: 15px
 
+@media (min-width: $screen-md)
+  .hide-nav-mobile
+    display: block
+  
+  .navbar-header.show-title-mobile
+    display: none !important
+
+@media (max-width: $screen-md)
+  .navbar-header.show-title-mobile
+    display: block !important
+    width: 100%
+    text-align: center
+    padding-top: 10px
+    h3
+      color: $tertiaryColor
+
+  .hide-nav-mobile
+    display: none
+
 @media (min-width: $screen-sm) and (max-width: $screen-md)
   body .course-selector.isFull:after
-    right: 5px;
+    right: 5px
+
+  #hide-sm-down
+    display:none
+  
+
+@media (max-width: $screen-md) 
+  .navbar-collapse.collapse 
+    display: none !important
+
+  .show-title-mobile
+    display: block;
+  
